--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,7 +8,7 @@
 <title>阿拉亲子</title>
 <link href="{{url_for('static',filename = 'css/base.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{url_for('static',filename = 'css/denglu.css')}}" rel="stylesheet" type="text/css" />
-<script type="{{url_for('static',filename = 'text/javascript')}}" src="js/jquery1.42.min.js"></script>
+<script type="text/javascript" src="{{url_for('static',filename = 'js/jquery1.42.min.js')}}"></script>
 </head>
 <body>
 <div class="logBox">
