--- a/app/templates/userData.html
+++ b/app/templates/userData.html
@@ -14,12 +14,12 @@
 
 <meta name="keywords" />
 
-<link href="css/ddxq.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="js/public.js"></script>
-<link href="css/base.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="js/jquery1.42.min.js"></script>
-<script type="text/javascript" src="js/popup_layer.js"></script>
-<script type="text/javascript" src="js/blk.js"></script>
+<link href="{{url_for('static',filename = 'css/ddxq.css')}}" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="{{url_for('static',filename = 'js/public.js')}}"></script>
+<link href="{{url_for('static',filename = 'css/base.css')}}" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="{{url_for('static',filename = 'js/jquery1.42.min.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static',filename = 'js/popup_layer.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static',filename = 'js/blk.js')}}"></script>
 </script>	
 </head>
 
@@ -61,22 +61,22 @@
             <table width="400" border="0" class="demo-table">
   <tr>
     <td style="text-align:right">用户名</td>
-    <td>哈哈</td>
+    <td>{{ userName }}</td>
     <td><a >[修改]</a></td>
   </tr>
   <tr>
     <td style="text-align:right">密码</td>
-    <td>3165465</td>
+    <td>{{password}}</td>
     <td><a class="ele7">[修改]</a></td>
   </tr>
   <tr>
     <td style="text-align:right">手机号</td>
-    <td>12345678912</td>
+    <td>{{iphone}}</td>
     <td><a>[修改]</a></td>
   </tr>
   <tr>
     <td style="text-align:right">邮箱</td>
-    <td>1564554@qq.com</td>
+    <td>{{email}}</td>
     <td><a>[修改]</a></td>
   </tr>
 </table>
