--- a/app/templates/user_catalog_list.html
+++ b/app/templates/user_catalog_list.html
@@ -357,18 +357,18 @@
 	      </div><!-- .options -->
 	      
 	      <div class="listing_product">
-            <% for book in book_list%>
+            {% for book in book_list%}
 			<div class="product_li">
 				<div class="grid_3">
 					<img class="sale" src="images/new.png" alt="New"/>
 					<div class="prev">
-						<a href="product_page.html"><img src="{{url_for('static',filename=book.imag)}}" alt="" title="" /></a>
+						<a href="product_page.html"><img src="{{url_for('static',filename=book['image'])}}" alt="" title="" /></a>
 					</div><!-- .prev -->
 				</div><!-- .grid_3 -->
 				
 				<div class="grid_4">
 					<div class="entry_content">
-						<a href="product_page.html"><h3 class="title">{{book.name}}</h3></a>
+						<a href="product_page.html"><h3 class="title">{{book['name']}}</h3></a>
 						<div class="review">
 							<a class="plus" href="#"></a>
 							<a class="plus" href="#"></a>
@@ -377,15 +377,16 @@
 							<a href="#"></a>
 							<span>1 REVIEW(S)</span>
 						</div>
-						<p>{{book.message}}</p>
+						<p>{{book['message']}}</p>
 						<a class="more" href="product_page.html">Learn More</a>
 					</div><!-- .entry_content -->
 				</div><!-- .grid_4 -->
+                
 				
 				<div class="grid_2">
 					<div class="cart">
 						<div class="price">
-							<div class="price_new">${{book.price}}</div>
+							<div class="price_new">${{book['price']}}</div>
 							<div class="price_old">$725.00</div>
 						</div>
 						<a href="#" class="bay">Add to Cart</a>
@@ -396,7 +397,7 @@
 				
 				<div class="clear"></div>
 			</div><!-- .article -->
-			<% endfor %>
+			{% endfor %}
 	      <div class="clear"></div>
 	      </div><!-- .listing_product -->
 	      
