--- a/app/templates/user_product_page.html
+++ b/app/templates/user_product_page.html
@@ -361,15 +361,15 @@
        </div><!-- .sidebar -->
 
        <div id="content" class="grid_9">
-	      <h1 class="page_title">Candles Orange Vanilla</h1>
+	      <h1 class="page_title">{{ book['name'] }}</h1>
 
 		<div class="product_page">
 			<div class="grid_4 img_slid" id="products">
 				<img class="sale" src="images/sale.png" alt="Sale"/>
 				<div class="preview slides_container">
 					<div class="prev_bg">
-						<a href="images/produkt_slid.png" class="jqzoom" rel='gal1' title="">
-							<img src="images/produkt_slid.png"  title="" alt=""/>
+						<a href="{{url_for('static',filename=book['image'])}}" class="jqzoom" rel='gal1' title="">
+							<img src="{{url_for('static',filename=book['image'])}}"  title="" alt=""/>
 						</a>
 					</div>
 				</div><!-- .prev -->
@@ -399,19 +399,19 @@
 						<span>1 REVIEW(S)</span>
 						<a class="add_review" href="#">ADD YOUR REVIEW</a>
 					</div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra faucibus congue. Aenean luctus dolor et purus malesuada luctus. Quisque ullamcorper ante viverra lectus fermentum quis rutrum erat sollicitudin. Fusce tortor massa.</p>
+					<p>{{book['message']}}</p>
 					<div class="ava_price">
 						<div class="availability_sku">
 							<div class="availability">
-								Availability: <span>In stock</span>
+								状态: <span>In stock</span>
 							</div>
 							<div class="sku">
-								SKU: <span>Candles OV</span>
+								作者: <span>{{book['author']}}</span>
 							</div>
 						</div><!-- .availability_sku -->
 
 						<div class="price">
-							<div class="price_new">$550.00</div>
+							<div class="price_new">${{book['price']}}</div>
 							<div class="price_old">$725.00</div>
 						</div><!-- .price -->
 					</div><!-- .ava_price -->
@@ -423,9 +423,11 @@
 						</div>
 
 						<div class="cart">
-							<a href="#" class="bay">Add to Cart</a>
-							<input type="text" name="" class="number" value="1" />
+                            <form method='GET' action="/book/collect" id="thisform">
+                            <input type="hidden" name="book_id" value={{book['id']}}>
+							<a href="javascript:void(0)" class="bay" onclick="document.getElementById('thisform').submit()">Add to Cart</a>
 							<span>Quantity:</span>
+                            </form>
 						</div>
 						<div class="clear"></div>
 					</div><!-- .block_cart -->
