booklist Signed-off-by: yiquriyue <15779289060@163.com>

--- a/app/templates/user_product_page.html
+++ b/app/templates/user_product_page.html
@@ -423,7 +423,7 @@
 						</div>
 
 						<div class="cart">
-                            <form method='GET' action="/book/collect" id="thisform">
+                            <form method='POST' action="/book/collect" id="thisform">
                             <input type="hidden" name="book_id" value={{book['id']}}>
 							<a href="javascript:void(0)" class="bay" onclick="document.getElementById('thisform').submit()">Add to Cart</a>
 							<span>Quantity:</span>
